[#5] fixed merge issues with develop

--- a/hs_app_timeseries/templates/pages/timeseriesresource.html
+++ b/hs_app_timeseries/templates/pages/timeseriesresource.html
@@ -187,6 +187,8 @@
                           </div>
                           <div id="file-types">Any file type can be uploaded.</div>
                           <div id="file-multiple">Multiple file upload is allowed.</div>
+                          <br>
+                             <h3 style="color: red" id="file-type-error"></h3>
                           <hr>
                           <div>
                               <strong><input type="checkbox" name="extract-metadata" value="No" onclick="setCheckboxValue(this)"> Check to extract metadata from this uploaded file</strong>
