--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -461,13 +461,10 @@
                     {% endfor %}
 
                     {% if page.perms.change %}
-                        {#                        <td><button class="btn btn-success"  data-toggle="modal" data-target="#add-file-dialog" multiple="multiple">Add file</button></td>#}
-{#                        {% if cm|resource_type != "Geographic Raster Resource" or not cm.files.all %}#}
-                            <td><a id="btn-add-file" type="button" class="btn btn-success" data-toggle="modal" data-target="#add-file-dialog"
-                                   multiple="multiple">
-                                <span class="glyphicon glyphicon-plus"><span class="button-label"> Add file...</span></span>
-                            </a></td>
-{#                        {% endif %}#}
+                        <td><a id="btn-add-file" type="button" class="btn btn-success" data-toggle="modal" data-target="#add-file-dialog"
+                               multiple="multiple">
+                            <span class="glyphicon glyphicon-plus"><span class="button-label"> Add file...</span></span>
+                        </a></td>
                     {% endif %}
                 </div>
             </div>
@@ -967,10 +964,12 @@
         if(allow_multiple_file_upload === "True"){
             $("#file-multiple").text("Multiple file upload is allowed.");
             $("#btn-add-file").attr('multiple', 'multiple');
+            $("#add-file-input").attr('multiple', 'multiple');
         }
         else{
             $("#file-multiple").text("Only one file can be uploaded.");
             $("#btn-add-file").removeAttr('multiple');
+            $("#add-file-input").removeAttr('multiple');
             if(file_count > 0){
                 $("#btn-add-file").hide();
             }
