--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -12,7 +12,7 @@
 
     <h2>Add HIS Reference Metadata for the <i>{{ title }}</i> resource</h2>
 
-    <form class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/create-ref-time-series/">
+    <form id="create-form" class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/create-ref-time-series/">
         {% csrf_token %}
 
 
@@ -293,6 +293,14 @@
                 b.addClass('disabled');
                 var b = $('#submit');
                 b.addClass('disabled');
+            });
+
+            $('#create-form').on("keyup keypress", function(e) {
+                var code = e.keyCode || e.which;
+                if (code  == 13) {
+                    e.preventDefault();
+                    return false;
+                }
             });
         });
     </script>
