--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -1,4 +1,4 @@
-{# This template is used as the landing page for NetCDF Resource #}
+{# This template is used as the landing page for Model Program resource #}
 
 {% extends "pages/genericresource.html" %}
 {% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}
