--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -1,4 +1,4 @@
-{# This template is used as the landing page for TimeSeriesResource #}
+{# This template is used as the landing page for Generic Model Instance resource type #}
 
 {% extends "pages/genericresource.html" %}
 {% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}
