accesses HIS Central urls only relevant files committed

--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -15,13 +15,14 @@
     <form id="create-form" class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/create-ref-time-series/">
         {% csrf_token %}
 
-
-
-        <h3>Link to your Time Series:</h3>
-        <div class="form-group has-feedback" id="url-input">
-            <label for="" class="col-sm-2 control-label">HIS URL</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="url" id="url" placeholder="www.example.org.asmx?WSDL" aria-describedby="inputSuccess">
+        <div class="form-group" id="hisc-input">
+            <h4><strong>Select from HIS Central Services or input your own url:</strong></h4>
+            <p id="his-loading" style="color:#CC7A00"><i>(loading HIS Central services)</i></p>
+            <div class="ui-widget">
+                <label for="" class="col-sm-2 control-label">URL</label>
+                <div class="col-sm-10">
+                    <select class="" name="url" id="url" size="10" style="overflow-y: scroll;"></select>
+                </div>
             </div>
         </div>
 
@@ -31,7 +32,7 @@
 
 
         <div class="form-group cuahsi-his cuahsi-his-2">
-            <label for="" class="col-sm-2 control-label">Site from Server</label>
+            <label for="" class="col-sm-2 control-label">Site</label>
             <div class="col-sm-10">
                 <select class="form-control" name="site" id="site"></select>
             </div>
@@ -79,19 +80,41 @@
             </div>
         </div>
 
+{#        <div class="form-group" >#}
+{#            <div class="col-sm-offset-2 col-sm-10">#}
+{#                <input type="text" name='url' value='' >#}
+{#            </div>#}
+{#        </div>#}
+
 
 
     </form>
-
+    <style>
+        .custom-combobox {
+            width:100%;
+        }
+        .custom-combobox-toggle {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin-left: -1px;
+            padding: 0;
+        }
+        .custom-combobox-input {
+            margin: 0;
+            padding: 5px 10px;
+        }
+        .ui-autocomplete-input {
+            width:100%;
+        }
+    </style>
 {% endblock %}
 
 {% block extra_js %}
-    <link rel="stylesheet" href="../../static/ref_ts/rickshaw/rickshaw.min.css">
-    <script src=" {% static "ref_ts/rickshaw/vendor/d3.min.js" %}"></script>
-    <script src=" {% static "ref_ts/rickshaw/vendor/d3.layout.min.js" %}"></script>
-    <script src=" {% static "ref_ts/rickshaw/rickshaw.min.js" %}"></script>
     <script type="text/javascript">
         $(function() {
+
+            var globurl = "";
 
             $(document).ready(function(){
                 $('#preview-div').hide();
@@ -99,16 +122,16 @@
                 $('.cuahsi-his').hide();
                 $('#loading-1').hide();
                 $('#loading-2').hide();
+                get_his_central_urls();
             });
 
-
-            $('#url').on('input', function(){
+            function check_url(url){
+                globurl = url;
                 $('#url-input').removeClass("has-success");
                 $('#url-input').removeClass("has-error");
                 $('#fail-notice').hide();
                 $('#loading-1-text').html('<h3></h3>');
 
-                var url = $('#url').val();
                 if (url.match(/WSDL$/) || url.match(/wsdl$/)){
                     $('.cuahsi-his-1').show();
                     $('#preview-div').html( '<div class="col-sm-offset-2" id="preview"></div>');
@@ -120,11 +143,11 @@
                     $.ajax({
                         type: "GET",
                         url: '/hsapi/_internal/verify-rest-url/',
-                        data: {url: $('#url').val()},
+                        data: {url: url},
                         success: function (data, xhr, status) {
                             if (data == 200) {
                                 $('#url-input').addClass("has-success");
-                            getVals('rest');
+                                getVals('rest');
                             }
                             else if (data == 400 || data == 404) {
                                 $('#loading-1-text').html('<h3>URL did not verify. There may be a problem with the URL you entered</h3>');
@@ -140,16 +163,39 @@
                     });
                 }
 
-                var b = $('#verify-rest-button');
-                b.html('Verify');
-                b.removeClass('btn-danger');
-                b.removeClass('btn-success');
                 $('#preview-div').hide();
                 $('#fail-notice').hide();
                 var b = $('#submit');
                 b.addClass('disabled');
-            });
+            }
 
+            function get_his_central_urls(){
+                $.ajax({
+                    type: "GET",
+                    url: '/hsapi/_internal/get-his-urls/',
+                    success: function (data, xhr, status) {
+                        var select = document.getElementsByName('url')[0];
+                        removeOptions(select);
+                        $('#his-loading')
+                                .html('HIS Central Servers available')
+                                .css('color', 'Green');
+                        for (var site in data) {
+                            var ln = (data[site]);
+                            var opt = document.createElement('option');
+                            opt.value = ln;
+                            opt.innerHTML = ln;
+                            select.appendChild(opt);
+
+                        }
+
+                    },
+                    error: function(){
+                        $('#his-loading')
+                                .html('HIS Central Servers currently not available')
+                                .css('color','Red');
+                    }
+                });
+            }
 
             function removeOptions(selectbox){
                 var i;
@@ -157,14 +203,6 @@
                 {
                     selectbox.remove(i);
                 }
-            }
-
-            function compare(a,b) {
-                if (a.x < b.x)
-                    return -1;
-                if (a.x > b.x)
-                    return 1;
-                return 0;
             }
 
             function get_sites(url){
@@ -188,7 +226,7 @@
                         }
                     },
                     error: function(data, stuff){
-                        $('#loading-1').
+                        $('#loading-1-text').html('<h3">There was an error retrieving sites for this server</h3>');
                                 console.log(data);
                         console.log(stuff);
                     }
@@ -199,7 +237,8 @@
                 $('#loading-2').show();
                 var n = site.indexOf(':'),
                         site_code = site.substr(n+2);
-                var url = $('#url').val();
+                var url = globurl;
+
                 $.ajax({
                     type:"GET",
                     url:'/hsapi/_internal/search-variables/',
@@ -222,6 +261,7 @@
                         $('#loading-2').hide();
                     },
                     error: function(data, stuff) {
+                        $('#loading-2-text').html('<h3">There was an error retrieving variables for this site</h3>');
                         console.log(data);
                         console.log(stuff);
 
@@ -234,12 +274,12 @@
                 $('#preview-div').html('<h2 class="col-sm-offset-2 col-sm-10">Retrieving Data . . .</h2>');
                 $('#preview-div').show();
                 if (ref_type == 'rest') {
-                    var service_url = $('#url').val(),
+                    var service_url = globurl,
                             site,
                             variable;
                 }
                 else {
-                    service_url = $('#url').val();
+                    service_url = globurl;
                     var full_site = $('#site').val();
                     var n = full_site.indexOf(':');
                     site = full_site.substr(n+2);
@@ -261,9 +301,13 @@
                         var b = $('#submit');
                         b.removeClass('disabled');
                         $('#loading-1').hide();
+                        $('#url').append($("<option></option>")
+                                .attr("value",service_url)
+                                .text(service_url));
+                        $('#url').val(service_url);
                     },
                     error: function(data, stuff){
-                        $('#url-input').removeClass("has-success")
+                        $('#url-input').removeClass("has-success");
                         $('#fail-notice').show();
                         console.log(data);
                         console.log(stuff);
@@ -301,6 +345,132 @@
                     e.preventDefault();
                     return false;
                 }
+            });
+
+            $.widget( "custom.combobox", {
+                _create: function() {
+                    this.wrapper = $( "<span>" )
+                            .addClass( "custom-combobox" )
+                            .insertAfter( this.element );
+
+                    this.element.hide();
+                    this._createAutocomplete();
+                    this._createShowAllButton();
+                },
+
+                _createAutocomplete: function() {
+                    var selected = this.element.children( ":selected" ),
+                            value = selected.val() ? selected.text() : "";
+
+                    this.input = $( "<input>" )
+                            .appendTo( this.wrapper )
+                            .val( value )
+                            .attr( "title", "" )
+                            .addClass( "" )
+                            .autocomplete({
+                                delay: 0,
+                                minLength: 0,
+                                source: $.proxy( this, "_source" )
+                            })
+                            .tooltip({
+                                tooltipClass: "ui-state-highlight"
+                            });
+
+                    this._on( this.input, {
+                        autocompleteselect: function( event, ui ) {
+                            check_url(ui.item.value);
+                            ui.item.option.selected = true;
+                            this._trigger( "select", event, {
+                                item: ui.item.option
+                            });
+                        },
+
+                        autocompletechange: "_removeIfInvalid"
+                    });
+                },
+
+                _createShowAllButton: function() {
+                    var input = this.input,
+                            wasOpen = false;
+
+                    $( "<a>" )
+                            .attr( "title", "Show All Items" )
+                            .tooltip()
+                            .appendTo( this.wrapper )
+                            .button({
+                                icons: {
+                                    primary: "ui-icon-triangle-1-s"
+                                },
+                                text: false
+                            })
+                            .removeClass( "ui-corner-all" )
+                            .addClass( "custom-combobox-toggle ui-corner-right" )
+                            .mousedown(function() {
+                                wasOpen = input.autocomplete( "widget" ).is( ":visible" );
+                            })
+                            .click(function() {
+                                input.focus();
+
+                                // Close if already visible
+                                if ( wasOpen ) {
+                                    return;
+                                }
+
+                                // Pass empty string as value to search for, displaying all results
+                                input.autocomplete( "search", "" );
+                            });
+                },
+
+                _source: function( request, response ) {
+                    var matcher = new RegExp( $.ui.autocomplete.escapeRegex(request.term), "i" );
+                    check_url(request.term);
+                    response( this.element.children( "option" ).map(function() {
+                        var text = $( this ).text();
+                        if ( this.value && ( !request.term || matcher.test(text) ) )
+                            return {
+                                label: text,
+                                value: text,
+                                option: this
+                            };
+                    }) );
+                },
+
+                _removeIfInvalid: function( event, ui ) {
+
+                    // Selected an item, nothing to do
+                    if ( ui.item ) {
+                        return;
+                    }
+
+                    // Search for a match (case-insensitive)
+                    var value = this.input.val(),
+                            valueLowerCase = value.toLowerCase(),
+                            valid = false;
+                    this.element.children( "option" ).each(function() {
+                        if ( $( this ).text().toLowerCase() === valueLowerCase ) {
+                            this.selected = valid = true;
+                            return false;
+                        }
+                    });
+
+                    // Found a match, nothing to do
+                    if ( valid ) {
+                        return;
+                    }
+
+                },
+
+                _destroy: function() {
+                    this.wrapper.remove();
+                    this.element.show();
+                }
+            });
+        });
+
+        $(function() {
+            $( "#url" ).combobox();
+            $( "#toggle" ).click(function() {
+                $( "#combobox" ).toggle();
             });
         });
     </script>
