--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -31,6 +31,7 @@
                 <option value="ModelInstanceResource">Model Instance Resource</option>
                 <option value="NetcdfResource">Multidimensional Space and Time Data Resource</option>
                 <option value="ModelProgramResource">Model Program Resource</option>
+                <option value="ToolResource">Tool Resource</option>
             </select>
         </div>
     </div>
