[#290] resource file delete dialogbox message changed

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -404,8 +404,7 @@
                                                 <h4 class="modal-title">Confirm file deletion</h4>
                                             </div>
                                             <div class="modal-body">
-                                                This will delete the file from the resource. Consider saving a copy if
-                                                it is important to you.
+                                                Consider saving a copy of the file before you delete it if it is important to you.
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">
