--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -502,6 +502,14 @@
                             </a>
                         </li>
                     {% endif %}
+                    {% if relevant_tools %}
+                        <li class="col-md-3 col-sm-3 col-xs-12">
+                            <a href="#relevantTools" data-toggle="tab">
+                                <span class="glyphicon glyphicon-wrench"></span>
+                                &nbspRelevant Tools
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
             <div class="tabs-body">
@@ -690,6 +698,15 @@
                     {% block extended_metadata %}
 
                     {%  endblock %}
+                </div>
+
+                <!-- ========= RELEVANT TOOLS TAB ========= -->
+{#            {% if site or extended_metadata_exists or res_add_metadata %}#}
+                <div class="tab-pane" id="relevantTools">
+                    {% for tool in relevant_tools %}
+                        <p>{{ tool.title }}</p>
+                        <a href="{{ tool.url }}"><button>run tool</button></a>
+                    {% endfor %}
                 </div>
             </div>
 {#            {% endif %}#}
