--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -11,22 +11,21 @@
         <div class="col-lg-2" id="folders">
             <ul class="nav nav-stacked">
                 <li><a href="?creator={{ user.pk }}">Owned by me</a></li>
-                {#  <li><a href="#">Starred <i class="fa fa-star"></i></a></li> #}
                 <li><a href="?user={{ user.pk }}&edit_permission=true">Editable by me</a></li>
                 {% if user.pk %}
                     <li><a href="?user={{ user.pk }}">Viewable by me</a></li>
                 {% else %}
                     <li><a href="/my-resources">Viewable by me</a></li>
                 {%  endif %}
-               {#  <li><a href="?published=true">Published</a></li>#}
-                {# <li><a href="#">Recent</a></li> #}
+                <li><a class="btn btn-success" href="/hsapi/_internal/create-resource"><i class="fa fa-plus"></i> Create new</a></li>
             </ul>
         </div>
         <div class="col-lg-10" id="items">
             <h2 class="page-title">Resources</h2>
-            <div style="padding-bottom: 0.5em">
-{#            <a class="btn btn-success" href="/resource-selection/"><i class="fa fa-plus"></i> Create new</a>#}
-                <a class="btn btn-success" href="/hsapi/_internal/create-resource"><i class="fa fa-plus"></i> Create new</a>
+            <div class=resource-search>
+                <input class=resource-search-entry></input>
+                <ul class=resource-search-items></ul>
+                <ul class=resource-search-options></ul>
             </div>
             <table class="table table-striped table-hover" id="item-selectors">
                 <tr>
@@ -85,5 +84,146 @@
                 return false;
             })
         })
+
+        $.widget("custom.ResourceFilter", {
+            options: {
+
+            },
+
+            _create: function() {
+                this.$input = this.element.find('input');
+                this.$ul = this.element.find('.resource-search-items');
+                this.$options = this.element.find('.resource-search-options');
+                this.curOpt = null;
+
+                this.$input.on('keyup', this.scanForItem.bind(this))
+
+                this.setPadding();
+            },
+
+            // return: [{type: T, value: V}, ...]
+            searchForTerm: function(term) {
+                var terms = [];
+
+                return new Promise(function(resolve, error) {
+                    if (term.length === 0) {
+                        resolve([]);
+                    } else {
+                        $.ajax("/hsapi/_internal/search/autocomplete/").then(function(r){
+                            var results = [];
+                            for (var i=0; i < r.length; i++) {
+                                if (r[i].value.indexOf(term) >= 0) {
+                                    results.push(r[i]);
+                                }
+                            }
+                            resolve(results);
+                        });
+                    }
+                });
+            },
+
+            // 40 UP
+            // 38 DOWN
+            // 8  BACKSPACE
+
+            scanForItem: function(ev) {
+                switch (ev.keyCode) {
+                    case 8:
+                        if (this.$input[0].selectionStart === 0 && this.$input[0].selectionEnd === 0) {
+                            this.removeLastItem();
+                            return;
+                        }
+                    case 40:
+                        this.selectDown();
+                        break;
+                    case 38:
+                        this.selectUp();
+                        break;
+                    default:
+                        // ...
+                }
+                var self = this;
+                var text = this.$input.val();
+                var termPos = text.search(/\w+:\w+ $/);
+                if (termPos >= 0) {
+                    var remaining = text.slice(0, termPos);
+                    var term = text.slice(termPos);
+                    var term_parts = term.split(':');
+
+                    this.$input.val(remaining);
+                    this.addItem(term_parts[0], term_parts[1]);
+                } else {
+                    var current = text.slice(text.search(/\w+$/));
+                    this.searchForTerm(current).then(this.showOptions.bind(this));
+                }
+            },
+
+            showOptions: function(options) {
+                var self = this;
+                this.$options.html("");
+                $.each(options, function() {
+                    self.addOption(this.label, this.value);
+                });
+            },
+            addOption: function(type, value) {
+                // <li data-label=foo>bar</li>
+                var $item = $("<li></li>");
+                $item.attr('data-label', type);
+                $item.text(value);
+                this.$options.append($item);
+
+                this.setPadding();
+                this._showSelection();
+            },
+            selectDown: function() {
+                if (this.curOpt === null) {
+                    this.curOpt = 0;
+                } else {
+                    this.curOpt += 1;
+                }
+                this._showSelection();
+            },
+            selectUp: function() {
+                if (this.curOpt === null) {
+                    this.curOpt = this.$options.length - 1;
+                } else {
+                    this.curOpt -= 1;
+                }
+                this._showSelection();
+            },
+            _showSelection: function() {
+                if (this.curOpt !== null) {
+                    this.$options.find('li').removeClass('selected');
+                    this.$options.find('li:eq('+this.curOpt+')').addClass('selected');
+                }
+            },
+
+            addItem: function(type, value) {
+                // <li data-label=foo>bar</li>
+                var $item = $("<li></li>");
+                $item.attr('data-label', type);
+                $item.text(value);
+                this.$ul.append($item);
+
+                this.setPadding();
+            },
+
+            removeLastItem: function() {
+                this.$ul.find('li:last-child').remove();
+
+                this.setPadding();
+            },
+
+            setPadding: function() {
+                $li = this.$ul.find('li');
+                var width = 0;
+                $li.each(function(){ width += $(this).outerWidth()+5; });
+                this.$input.css('padding-left', width+"px");
+            },
+        });
+
+        $(function() {
+            $('.resource-search').ResourceFilter();
+        });
     </script>
 {% endblock %}
