[#303] Add SWAT Model Instance to create resource page

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -29,6 +29,7 @@
 {#                <option value="InstResource">RHESSys Instance Resource</option> #}
                 <option value="RefTimeSeries">HIS Referenced Time Series</option>
                 <option value="ModelInstanceResource">Model Instance Resource</option>
+                <option value="SWATModelInstanceResource">SWAT Model Instance Resource</option>
                 <option value="NetcdfResource">Multidimensional Space and Time Data Resource</option>
                 <option value="ModelProgramResource">Model Program Resource</option>
                 <option value="ToolResource">Tool Resource</option>
