changed Owner to First author for the resource list table header as Dave suggested

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -34,7 +34,7 @@
                     <th>Title</th>
                     {# <th><i class="text-warning fa fa-star"></i></th> #}
                     <th>Type</th>
-                    <th>Owner</th>
+                    <th>First author</th>
                     <th>Last modified</th>
                 </tr>
 
